--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@
 					{% if page.tags.size > 0 %}
 						<span class="post-meta">
 							{% for tag in page.tags %}
-								<a href="/sitemap/#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+								<a href="/#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
 							{% endfor %}
 						</span>
 					{% endif %}
