--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -80,14 +80,11 @@
 				   
 				   <p class="share">
 							Share this post:
-							<a class="icon-twitter" href="http://twitter.com/share?text={{ post.title }}&url={{ post.url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+							<a class="icon-twitter" href="http://twitter.com/share?text={{ post.title }}&url=http://lingyeungb.com{{ post.url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
 								<span class="hidden">Twitter</span>
 							</a> 
-							<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ post.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+							<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://lingyeungb.com{{ post.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
 								<span class="hidden">Facebook</span>
-							</a> 
-							<a class="icon-google-plus" href="https://plus.google.com/share?url={{ post.url }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-								<span class="hidden">Google+</span>
 							</a>
 						</p>
 				</section>
