--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -65,9 +65,11 @@
 							{% endfor %}
 						</span>
 					{% endif %}
-							
+						
+{{ page.date | date: "%-d %B %Y" }}
+						
 					<h2 class="post-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-					<span class="post-meta"><time datetime="{{ post.date | date: "%b %-d, %Y" }}">{{ post.date | date: "%b %-d, %Y" }}</time></span>
+					<span class="post-meta"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></span>
 				</header>
 
 				<section class="post-content">
